# sprout-diagram

./: LICENSE  README.md
sprout/: CHANGELOG.md  LICENSE  shell.nix  sprout.cabal
sprout/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
sprout/exe/: Main.hs
