cabal-version:      3.4
name:               sprout
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           abundantsolutions.dev
license:            ISC
license-file:       LICENSE
author:             N.J. Childs
maintainer:         sirbeerus@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable sprout
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0,
		      svg-builder,
                      diagrams,
  	              diagrams-lib,
 	              diagrams-svg,
	              bytestring,
                      diagrams-cairo,
		      pango,
		      colour
		      

    hs-source-dirs:   exe
    default-language: GHC2021
